# lpic

./: .gitignore  README.md  demo.py  pyproject.toml
mnt/user-data/outputs/lpic/src/lpic/audit/: __init__.py
mnt/user-data/outputs/lpic/src/lpic/db/: __init__.py
mnt/user-data/outputs/lpic/src/lpic/identity/: __init__.py
mnt/user-data/outputs/lpic/src/lpic/policy/: __init__.py
mnt/user-data/outputs/lpic/src/lpic/utils/: __init__.py
mnt/user-data/outputs/lpic/tests/: __init__.py
src/lpic/: __init__.py  config.py  engine.py  errors.py  invariants.py
src/lpic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/lpic/audit/: __init__.py  integrity.py  log_schema.py  recorder.py
src/lpic/db/: __init__.py  connection.py  migrations.py  schema.py
src/lpic/identity/: identity_store.py  keypair.py  signature.py
src/lpic/identity_v2/: __init__.py
src/lpic/policy/: __init__.py  conditions.py  evaluator.py  model.py
src/lpic/utils/: canonical_json.py  hashing.py  time.py
tests/: test_audit_integrity.py  test_determinism.py  test_identity.py  test_invariants.py  test_policy.py
